# fincals

./: pyproject.toml  readme.md
src/model/: __init__.py  main.py
src/model/calculation/: __init__.py
src/model/calculation/base/: __init__.py  calculation_node.py
src/model/calculation/dataset/: dataset.py
src/model/calculation/nodes/var_monte_carlo/: __init__.py  current_stock_price.py  daily_return.py  expected_value.py  historical_return_mean.py  historical_return_std.py  historical_return_t_params.py  input_parameters.py  mean_total_return.py  populate_montecarlo_df.py  value_at_risk.py
src/model/calculation/parameters/: parameters.py
src/model/calculation/preprocess/: __init__.py  read_historical_excel.py
src/model/calculation/variables/: computed_variables.py  domain_values.py  existing_variables.py  file_paths.py  historical.py  inputs.py  levels.py
src/model/data/: AMZN.xlsx  Untitled.ipynb  amzn.json  amzn.py  beta.py  dcf.py  goog.json  historical_cashflow.py  normal_random.py  read_historical_data.py
