[tool.poetry]
name = "fincals"
version = "0.1.0"
description = ""
authors = ["HaripriyaGnanasekaran <ramanathan.varadharajan@outlook.com>"]
readme = "README.md"
packages = [{include = "fincals"}]

[tool.poetry.dependencies]
python = "<=3.11.2, >3.9"
pandas = "^2.0.3"
yfinance = "^0.2.27"
scipy = "^1.11.1"
matplotlib = "^3.7.2"
tqdm = "^4.65.0"
openpyxl = "^3.1.2"
caching = "^0.1.dev8"


[tool.poetry.group.dev.dependencies]
tox = "^4.6.4"
black = "^23.7.0"
isort = "^5.12.0"
docformatter = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
